Fixed Edit and added comments for my classes

--- a/GroupAssignment/Views/Order/Create.cshtml
+++ b/GroupAssignment/Views/Order/Create.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Create Order";
 }
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Order Create View *@
+@* This view is used to create a new order. It includes a table for adding products to the order. *@
 
 <style>
     .info-text {
