--- a/GroupAssignment/Views/Order/Delete.cshtml
+++ b/GroupAssignment/Views/Order/Delete.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Delete Order";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Order Delete View *@
+@* This view is used to delete an order. It displays the order details and a delete button. *@
 <style>
     .info-text {
         color: #721c24; /* Dark red for emphasis */
