--- a/GroupAssignment/Views/Order/Details.cshtml
+++ b/GroupAssignment/Views/Order/Details.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Order Details";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@ 
+@* Order Details View *@
+@* This view is used to display the details of an order. It includes a table for displaying the products in the order. *@
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
