--- a/GroupAssignment/Views/Order/Index.cshtml
+++ b/GroupAssignment/Views/Order/Index.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Orders List";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Order Index View *@
+@* This view is used to display a list of orders. It includes a table for displaying the orders. *@
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
