--- a/GroupAssignment/Views/Product/Delete.cshtml
+++ b/GroupAssignment/Views/Product/Delete.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Delete Product";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Product Delete View *@
+@* This view is used to delete a product. It displays the product details and a delete button. *@
 <style>
     .info-text {
         color: #721c24; /* Dark red for emphasis */
