--- a/GroupAssignment/Views/Product/Edit.cshtml
+++ b/GroupAssignment/Views/Product/Edit.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Edit Product";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Product Edit View *@
+@* This view is used to edit a product. It displays the product details and a save button. *@
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
