--- a/GroupAssignment/Views/Order/Edit.cshtml
+++ b/GroupAssignment/Views/Order/Edit.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Edit Order";
 }
 
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Order Edit View *@
+@* This view is used to edit an order. It is similar to the create view, but it also includes a table for editing the products in the order. *@
+ 
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
@@ -123,13 +129,13 @@
                         </tbody>
                     </table>
                     <button type="button" style=margin:1px onclick ="addRow()" class="btn btn-custom">Add Row</button>
+                    <div class="form-group">
+                    <input type="submit" style=margin:5px value ="Save" class="btn btn-custom" />
+                </div>
                 </div>
             </form>
         </div>
     </div>
-                    <div class="form-group">
-                    <input type="submit" style=margin:5px value ="Save" class="btn btn-custom" />
-                </div
     <div class="mt-3">
         <a asp-action="Index" class="btn btn-custom-back">Back to List</a>
     </div>
