--- a/GroupAssignment/Views/Product/Create.cshtml
+++ b/GroupAssignment/Views/Product/Create.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Create Product";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Product Create View *@
+    @* This view is used to create a new product. *@
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
