--- a/GroupAssignment/Views/Product/Details.cshtml
+++ b/GroupAssignment/Views/Product/Details.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Product Details";
 }
-
+@* Dulan Wasala *@
+@* 991574529 *@
+@* Group Assignment *@
+@* Product Details View *@
+@* This view is used to display the details of a product. It includes a table for displaying the product details. *@
 <style>
     .info-text {
         color: #155724; /* Dark green for better contrast */
