--- a/GroupAssignment/Views/Account/Edit.cshtml
+++ b/GroupAssignment/Views/Account/Edit.cshtml
@@ -46,7 +46,12 @@
             cursor: pointer;
         }
 </style>
-
+@* 
+Yanhan Chen
+991647343
+Group Assignment
+User edit view
+*@
 <div class="edit-user-container">
     <div class="edit-user-form">
         <h1>@ViewData["Title"]</h1>
