--- a/GroupAssignment/Views/Account/Register.cshtml
+++ b/GroupAssignment/Views/Account/Register.cshtml
@@ -46,7 +46,12 @@
             cursor: pointer;
         }
 </style>
-
+@*
+Yanhan Chen
+991647343
+Group Assignment
+User register view
+*@
 <div class="register-container">
     <div class="register-form">
         <h1>@ViewData["Title"]</h1>
