--- a/GroupAssignment/Views/Account/Users.cshtml
+++ b/GroupAssignment/Views/Account/Users.cshtml
@@ -1,6 +1,11 @@
 ﻿<!-- Views/Account/Users.cshtml -->
 @model List<GroupAssignment.Models.UserModel>
-
+@*
+Yanhan Chen
+991647343
+Group Assignment
+User list view
+*@
 @{
     ViewData["Title"] = "User Management";
 }
