--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -1,4 +1,10 @@
-﻿@model GroupAssignment.Models.UserModel
+﻿@*
+Yanhan Chen
+991647343
+Group Assignment
+Inventory view
+*@
+@model GroupAssignment.Models.UserModel
 @{
     ViewData["Title"] = "Inventory Management";
 }
