--- a/GroupAssignment/Views/Product/Index.cshtml
+++ b/GroupAssignment/Views/Product/Index.cshtml
@@ -35,7 +35,12 @@
         gap: 5px; /* Adds space between buttons */
     }
 </style>
-
+@*
+Yanhan Chen
+991647343
+Group Assignment
+Product list view
+*@
 <div class="container mt-4">
     <h1 class="info-text">@ViewData["Title"]</h1>
 
