--- a/GroupAssignment/Views/Shared/_Layout.cshtml
+++ b/GroupAssignment/Views/Shared/_Layout.cshtml
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GroupAssignment.styles.css" asp-append-version="true" />
 </head>
-
+@*
+Yanhan Chen
+991647343
+Group Assignment
+Menu
+*@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
